--- a/SwordDemoLibrary/appnavigation/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/appnavigation/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.zxingscanner">
-    
-    <uses-permission android:name="android.permission.CAMERA"/>
-    
-    <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
+    package="com.example.appnavigation">
 
     <application
         android:allowBackup="true"
@@ -15,14 +11,13 @@
         android:theme="@style/Theme.SwordDemoLibrary">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
     </application>
 
 </manifest>
