--- a/SwordDemoLibrary/permission/build.gradle
+++ b/SwordDemoLibrary/permission/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     
+    //for Util lib
+    implementation project(':utilclass')
+    
     //for Unit Test
     testImplementation 'junit:junit:4.+'
     //for Instrument test
