--- a/SwordDemoLibrary/httptheory/build.gradle
+++ b/SwordDemoLibrary/httptheory/build.gradle
@@ -31,6 +31,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -44,5 +45,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
 
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
+
+    implementation project(":utilclass")
 
 }
