--- a/SwordDemoLibrary/webbasecontent/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/webbasecontent/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.sword.floatball">
-	
-	<uses-permission android:name="android.permission.INTERNET"/>
+	package="com.sword.webbasecontent">
 
 	<application
 		android:allowBackup="true"
@@ -12,10 +10,7 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.SwordDemoLibrary">
 		<activity
-			android:name="com.sword.webbasecontent.WebViewActivity"
-			android:exported="true" />
-		<activity
-			android:name=".MainActivity"
+			android:name=".WebViewActivity"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
