--- a/SwordDemoLibrary/webbasecontent/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/webbasecontent/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.SwordDemoLibrary">
 		<activity
-			android:name=".WebViewActivity"
+			android:name=".MainActivity"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
