--- a/SwordDemoLibrary/httptheory/build.gradle
+++ b/SwordDemoLibrary/httptheory/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
 
     implementation project(":utilclass")
+    compileOnly 'com.squareup.okhttp3:okhttp:5.0.0-alpha.3'
 
 }
