--- a/SwordDemoLibrary/pluginable/build.gradle
+++ b/SwordDemoLibrary/pluginable/build.gradle
@@ -35,9 +35,12 @@ dependencies {
 
 	implementation 'androidx.core:core-ktx:1.3.2'
 	implementation 'androidx.appcompat:appcompat:1.2.0'
-	implementation 'com.google.android.material:material:1.3.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
 	implementation "com.squareup.okio:okio:3.0.0"
+	implementation "com.squareup.okhttp3:okhttp:4.9.3"
+
+	implementation project(":utilclass")
 	
 	testImplementation 'junit:junit:4.+'
 	
