--- a/SwordDemoLibrary/androidarticle/build.gradle
+++ b/SwordDemoLibrary/androidarticle/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'com.android.application'
 	id 'kotlin-android'
-	id 'kotlin-android-extensions'
+	//id 'kotlin-android-extensions'
 }
 
 android {
@@ -29,6 +29,10 @@ android {
 	}
 	kotlinOptions {
 		jvmTarget = '1.8'
+	}
+	
+	buildFeatures {
+		viewBinding true
 	}
 }
 
