--- a/SwordDemoLibrary/CustomView/build.gradle
+++ b/SwordDemoLibrary/CustomView/build.gradle
@@ -23,8 +23,7 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '1.8'
