--- a/SwordDemoLibrary/androidapi/build.gradle
+++ b/SwordDemoLibrary/androidapi/build.gradle
@@ -22,13 +22,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
+    /*compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
+    }*/
+    /*kotlinOptions {
         jvmTarget = '1.8'
-    }
+    }*/
 }
 
 dependencies {
