--- a/SwordDemoLibrary/gradle.properties
+++ b/SwordDemoLibrary/gradle.properties
@@ -20,3 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 android.injected.testOnly=false
+org.gradle.java.home=D\:\\Java\\jdk-11.0.13
