--- a/SwordDemoLibrary/gradlescript/build.gradle
+++ b/SwordDemoLibrary/gradlescript/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'com.android.asset-pack'
 }
+
 
 android {
     compileSdkVersion 30
@@ -35,12 +37,15 @@ android {
 dependencies {
 
     compileOnly 'com.android.tools.build:gradle:4.1.0'
+    compileOnly 'com.android.asset-pack:com.android.asset-pack.gradle.plugin:7.3.0-alpla02'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
+    
     testImplementation 'junit:junit:4.+'
+    
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
