--- a/SwordDemoLibrary/build.gradle
+++ b/SwordDemoLibrary/build.gradle
@@ -39,4 +39,5 @@ ext {
     junitVersion = "4.13.2"
     androidXVersion = "1.4.0"
     googleTruthVersion = "1.1.3"
+    compose_accompanist_version = "0.24.3-alpha"
 }
