--- a/SwordDemoLibrary/jetpackcompose/build.gradle
+++ b/SwordDemoLibrary/jetpackcompose/build.gradle
@@ -57,6 +57,10 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
+
+    implementation "com.google.accompanist:accompanist-pager:$compose_accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$compose_accompanist_version"
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
