--- a/SwordDemoLibrary/openprojectcode/build.gradle
+++ b/SwordDemoLibrary/openprojectcode/build.gradle
@@ -32,7 +32,8 @@ android {
 }
 
 dependencies {
-
+    implementation project(":codelibrary")
+    
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
