--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -11,6 +11,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
 
+    <queries>
+        <package android:name="com.android.server.telecom"/>
+        <intent>
+            <action android:name="android.intent.action.DIAL"/>
+        </intent>
+    </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
